--- a/startopdracht/css/style.css
+++ b/startopdracht/css/style.css
@@ -1,8 +1,82 @@
 body {
-  font-family: 'Montserrat', sans-serif;
-  margin: 0;
-  padding: 0;
-  width: 100%;
-  height: 100%;
-  background: lightgray;
+    font-family: 'Montserrat', sans-serif;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    /*     background: lightgray;
+ */
+}
+
+.hero {
+    background-color: #6DCCAA;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
+.container {
+    width: 80vw;
+    max-width: 1200px;
+    margin: 0 auto;
+    border: 5px solid red;
+}
+
+.video-container {
+    flex-grow: 1;
+}
+
+.social-shit {
+    background-color: #6DCCAA;
+}
+
+.d-flex {
+    display: flex;
+}
+
+.justify-content {
+    justify-content: space-between;
+}
+
+.two-columns>* {
+    flex: 1 1 50%;
+}
+
+.three-columns>* {
+    flex: 1 1 calc(100%/3);
+    text-align: center;
+}
+
+.right {
+    padding: 0 100px;
+}
+
+.left {
+    padding: 0 100px;
+}
+
+.passie {}
+
+section {
+    padding: 4rem 0;
+}
+
+a:hover {
+    color: red;
+}
+
+a {
+    color: white;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+img {
+    max-width: 100%;
+    height: auto;
+}
+
+span {
+    font-weight: bold;
+    padding: 3px;
 }
