--- a/startopdracht/css/style.css
+++ b/startopdracht/css/style.css
@@ -36,8 +36,8 @@ nav a {
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+    width: 80%;
+    height: 80%;
 }
 
 .container {
@@ -91,15 +91,15 @@ header {
     height: 42px;
     border-radius: 100%;
     border: 2px solid white;
-    transition: .5s;
+    transition: 0.5s;
     text-align: center;
     line-height: 42px;
 }
 
-li:hover {
-    color: #333;
+.socialm li:hover {
+    background-color: #333;
     border: 2px solid #333;
-    transition: .5s;
+    transition: 0.5s;
     cursor: pointer;
 }
 
@@ -235,7 +235,7 @@ span {
 
 .maps:hover {
     background-color: #f7c040;
-    transition: .5s;
+    transition: 0.5s;
     color: white;
 }
 
@@ -293,5 +293,5 @@ input[type="submit"]:hover {
     color: #fff;
     background: #f7c040;
     border-color: #f7c040;
-    transition: .5s;
+    transition: 0.5s;
 }
